user-review correction

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 </div>
               </div>
               <div class="bottom-section">
-                Really brightened by day :&#41;
+                Really brightened my day :&#41;
               </div>
             </div>
 
